Extract and Population

--- a/src/app/diaglog/hl7-mapping/hl7-mapping.component.html
+++ b/src/app/diaglog/hl7-mapping/hl7-mapping.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Example HL7 Mapping</h2>
+<h2 mat-dialog-title>Data Extraction</h2>
 <mat-dialog-content>
     <td-message
             label="Information"
