--- a/src/app/form-detail/form-detail.component.scss
+++ b/src/app/form-detail/form-detail.component.scss
@@ -8,12 +8,14 @@
   width: 5% !important;
 }
 .mat-column-fhir {
-  width: 10% !important;
+  width: 5% !important;
 }
 .mat-column-name {
   width: 35% !important;
 }
-
+.mat-column-sdc {
+  width: 15% !important;
+}
 
 example-tree-invisible {
   display: none;
