--- a/src/app/form-detail/form-detail.component.html
+++ b/src/app/form-detail/form-detail.component.html
@@ -73,13 +73,28 @@
     <ng-container matColumnDef="required">
         <th mat-header-cell *matHeaderCellDef> Req. </th>
         <td mat-cell *matCellDef="let node">
-           {{node.item.required}}
+          <span *ngIf="node.item.required !== undefined && node.item.required">
+                <span class="material-symbols-outlined">check_box</span>
+            </span>
         </td>
     </ng-container>
     <ng-container matColumnDef="repeats">
         <th mat-header-cell *matHeaderCellDef> Repeats </th>
         <td mat-cell *matCellDef="let node">
-            {{node.item.repeats}}
+            <span *ngIf="node.item.repeats !== undefined && node.item.repeats">
+                <span class="material-symbols-outlined">check_box</span>
+            </span>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="sdc">
+        <th mat-header-cell *matHeaderCellDef> SDC </th>
+        <td mat-cell *matCellDef="let node">
+            {{getPrePopulate(node.item)}}
+            <span *ngIf="hasObservationExtraction(node.item)">
+                 <button matTooltip="Data Extraction" matTooltipClass="mat-tooltip-white" *ngIf="node.item.code !== undefined" mat-icon-button (click)="showMapping(node.item)">
+                <span class="material-symbols-outlined">chip_extraction</span>
+            </button>
+            </span>
         </td>
     </ng-container>
 
@@ -88,9 +103,6 @@
         <td mat-cell *matCellDef="let node" >
             <button matTooltip="View source" matTooltipClass="mat-tooltip-white"  mat-icon-button (click)="showCode(node.item)">
                 <mat-icon>code</mat-icon>
-            </button>
-            <button matTooltip="View HL7 mapping" matTooltipClass="mat-tooltip-white" *ngIf="node.item.code !== undefined" mat-icon-button (click)="showMapping(node.item)">
-                <mat-icon>map</mat-icon>
             </button>
         </td>
     </ng-container>
