--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,9 +65,8 @@
       </div>
 
       <div layout="row" layout-align="start center">
-          <td-markdown [content]="getDescription()"></td-markdown>
+          <td-markdown *ngIf="questionnaire?.description !== undefined" [content]="String(questionnaire?.description)"></td-markdown>
       </div>
-
 
     <td-message
       label="Information"
