--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,8 @@
         <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/fhir-sdoh-clinicalcare">HL7 Social Determinents of Health Clinical Care (US)</a>
       </mat-menu>
         <mat-menu #technicalIG="matMenu">
-            <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/sdc/">HL7 Structured Data Capture</a>
-            <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/fhir-ipa/">HL7 Internation Patient Access (Query API)</a>
+            <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/sdc/">HL7 Structured Data Capture (SDC)</a>
+            <a mat-menu-item target="_blank" href="https://build.fhir.org/ig/HL7/fhir-ipa/">HL7 International Patient Access (IPA)</a>
         </mat-menu>
       <mat-menu #tools="matMenu">
           <a mat-menu-item href="https://termbrowser.nhs.uk/" target="_blank">NHS England SNOMED CT Browser</a>
@@ -46,10 +46,10 @@
       </mat-menu>
       <mat-menu #informatics="matMenu">
 
-        <a mat-menu-item target="_blank" href="https://theprsb.org/standards/">Professional Record Standards Body</a>
+        <a mat-menu-item target="_blank" href="https://theprsb.org/standards/">Professional Record Standards Body (PRSB)</a>
         <a mat-menu-item target="_blank" href="https://ckm.openehr.org/ckm/">openEHR Clinical Knowledge Manager</a>
           <a mat-menu-item target="_blank" href="https://simplifier.net/guide/clinicalobservations">NHS England Clinical Observations</a>
-          <a mat-menu-item target="_blank" href="https://simplifier.net/guide/uk-core-implementation-guide-stu2">HL7 UK Core STU2</a>
+          <a mat-menu-item target="_blank" href="https://simplifier.net/guide/uk-core-implementation-guide-stu2">HL7 UK Core (FHIR)</a>
       </mat-menu>
             </div>
         </div>
