--- a/src/app/form-detail/form-detail.component.scss
+++ b/src/app/form-detail/form-detail.component.scss
@@ -14,7 +14,10 @@
   width: 35% !important;
 }
 .mat-column-sdc {
-  width: 15% !important;
+  width: 20% !important;
+}
+.mat-column-answer {
+  width: 20% !important;
 }
 
 example-tree-invisible {
