--- a/src/app/dialog/concept-popup/concept-popup.component.html
+++ b/src/app/dialog/concept-popup/concept-popup.component.html
@@ -18,7 +18,7 @@
        </td>
      </tr>
      <tr>
-       <td>Recommended FHIR <br/> Resource Mapping</td>
+       <td>Suggested FHIR <br/> Resource Mapping</td>
        <td>
            <span *ngIf="lookup !== undefined">
                <mat-chip-set *ngFor="let display of getCategory()">
