--- a/src/app/form-detail/form-detail.component.html
+++ b/src/app/form-detail/form-detail.component.html
@@ -89,12 +89,14 @@
     <ng-container matColumnDef="sdc">
         <th mat-header-cell *matHeaderCellDef> Pre-Population /<br/> Data Extraction (SDC) </th>
         <td mat-cell *matCellDef="let node">
-            {{getPrePopulate(node.item)}}
-            <span *ngIf="hasObservationExtraction(node.item)">
-                 <button matTooltip="Data Extraction" matTooltipClass="mat-tooltip-white" *ngIf="node.item.code !== undefined" mat-icon-button (click)="showMapping(node.item)">
-                <span class="material-symbols-outlined">chip_extraction</span>
-            </button>
-            </span>
+            <p *ngIf="getPrePopulate(node.item) !== ''">{{getPrePopulate(node.item)}}</p>
+            <p *ngIf="getCategory(node.item) !== ''">
+                {{getCategory(node.item)}}
+            </p>
+            <p *ngIf="hasObservationExtraction(node.item)">
+                <button mat-stroked-button matTooltip="Observation Data Extraction" matTooltipClass="mat-tooltip-white" (click)="showMapping(node.item)"> <mat-icon>check_box</mat-icon>Data Extraction</button>
+            </p>
+
         </td>
     </ng-container>
 
