--- a/src/app/form-detail/form-detail.component.html
+++ b/src/app/form-detail/form-detail.component.html
@@ -89,14 +89,35 @@
     <ng-container matColumnDef="sdc">
         <th mat-header-cell *matHeaderCellDef> Pre-Population /<br/> Data Extraction (SDC) </th>
         <td mat-cell *matCellDef="let node">
-            <p *ngIf="getPrePopulate(node.item) !== ''">{{getPrePopulate(node.item)}}</p>
+            <p *ngIf="hasDefinitionPopulate(node.item)">
+                <button mat-stroked-button matTooltip="Expression based extraction" matTooltipClass="mat-tooltip-white" (click)="showPopulation(node.item)"> <mat-icon>input_circle</mat-icon>Expression Populate</button>
+
+            </p>
+           <p *ngIf="hasObservationPopulate(node.item)">
+               <button disabled mat-stroked-button matTooltip="Observation based extraction" matTooltipClass="mat-tooltip-white" ><mat-icon>input_circle</mat-icon>Observation Populate</button>
+               {{getPrePopulate(node.item)}}</p>
+            <p *ngIf="hasObservationExtraction(node.item)">
+                <button mat-stroked-button matTooltip="Observation Data Extraction" matTooltipClass="mat-tooltip-white" (click)="showExtraction(node.item)"> <mat-icon>output_circle</mat-icon>Observation Extract</button>
+            </p>
             <p *ngIf="getCategory(node.item) !== ''">
                 {{getCategory(node.item)}}
             </p>
-            <p *ngIf="hasObservationExtraction(node.item)">
-                <button mat-stroked-button matTooltip="Observation Data Extraction" matTooltipClass="mat-tooltip-white" (click)="showMapping(node.item)"> <mat-icon>check_box</mat-icon>Data Extraction</button>
-            </p>
-
+            <span *ngIf="hasDefinitionExtraction(node.item)">
+                <button disabled mat-stroked-button matTooltip="Definition based Extraction" matTooltipClass="mat-tooltip-white"> <mat-icon>output_circle</mat-icon>Definition Extract</button>
+                <br/>For more details see <a href="https://build.fhir.org/ig/HL7/sdc/extraction.html#definition-based-extraction" target="_blank">HL7 SDC - Definition-based Extraction</a>
+                <table>
+                    <tr>
+                        <td>Definition</td>
+                        <td>{{node.item?.definition}}</td>
+                    </tr>
+                    <tr>
+                        <td>Extraction Contexxt</td>
+                        <td>
+                            <td-markdown [content]="getExtractionContext(node.item)"></td-markdown>
+                        </td>
+                    </tr>
+                </table>
+            </span>
         </td>
     </ng-container>
 
