--- a/src/app/form-detail/form-detail.component.html
+++ b/src/app/form-detail/form-detail.component.html
@@ -91,27 +91,37 @@
         <td mat-cell *matCellDef="let node">
             <p *ngIf="hasDefinitionPopulate(node.item)">
                 <button mat-stroked-button matTooltip="Expression based extraction" matTooltipClass="mat-tooltip-white" (click)="showPopulation(node.item)"> <mat-icon>input_circle</mat-icon>Expression Populate</button>
-
+                <a mat-icon-button color="primary" href=" https://build.fhir.org/ig/HL7/sdc/populate.html#expression-based-population" target="_blank"><mat-icon>info</mat-icon></a>
             </p>
-           <p *ngIf="hasObservationPopulate(node.item)">
-               <button disabled mat-stroked-button matTooltip="Observation based extraction" matTooltipClass="mat-tooltip-white" ><mat-icon>input_circle</mat-icon>Observation Populate</button>
-               {{getPrePopulate(node.item)}}</p>
+           <span *ngIf="hasObservationPopulate(node.item)">
+               <button disabled mat-stroked-button matTooltip="Observation based Populate" matTooltipClass="mat-tooltip-white" ><mat-icon>input_circle</mat-icon>Observation Populate</button>
+               <a mat-icon-button color="primary" href="https://build.fhir.org/ig/HL7/sdc/populate.html#observation-based-population" target="_blank"><mat-icon>info</mat-icon></a>
+
+               <table>
+                   <tr>
+                       <td>Pre Populate Period:</td>
+                       <td> {{getPrePopulate(node.item)}}</td>
+                   </tr>
+               </table>
+
+                </span>
             <p *ngIf="hasObservationExtraction(node.item)">
                 <button mat-stroked-button matTooltip="Observation Data Extraction" matTooltipClass="mat-tooltip-white" (click)="showExtraction(node.item)"> <mat-icon>output_circle</mat-icon>Observation Extract</button>
+                <a mat-icon-button color="primary" href="https://build.fhir.org/ig/HL7/sdc/extraction.html#observation-based-extraction" target="_blank"><mat-icon>info</mat-icon></a>
             </p>
             <p *ngIf="getCategory(node.item) !== ''">
                 {{getCategory(node.item)}}
             </p>
             <span *ngIf="hasDefinitionExtraction(node.item)">
                 <button disabled mat-stroked-button matTooltip="Definition based Extraction" matTooltipClass="mat-tooltip-white"> <mat-icon>output_circle</mat-icon>Definition Extract</button>
-                <br/>For more details see <a href="https://build.fhir.org/ig/HL7/sdc/extraction.html#definition-based-extraction" target="_blank">HL7 SDC - Definition-based Extraction</a>
+                <a mat-icon-button color="primary" href="https://build.fhir.org/ig/HL7/sdc/extraction.html#definition-based-extraction" target="_blank"><mat-icon>info</mat-icon></a>
                 <table>
                     <tr>
-                        <td>Definition</td>
+                        <td *ngIf="node.item?.definition">Definition:</td>
                         <td>{{node.item?.definition}}</td>
                     </tr>
                     <tr>
-                        <td>Extraction Contexxt</td>
+                        <td>Extraction Contexxt:</td>
                         <td>
                             <td-markdown [content]="getExtractionContext(node.item)"></td-markdown>
                         </td>
