--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,7 +74,7 @@
       color="primary"
       icon="information"
     ></td-message>
-    <span *ngIf="questionnaire !==null">
+    <span *ngIf="questionnaire !== undefined">
         <mat-tab-group (selectedTabChange)="changedTab($event)">
             <mat-tab label="Preview">
                  <span *ngIf="currentTab == 0">
